--- a/index.html
+++ b/index.html
@@ -1,20 +1,83 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>ASSIGNMENT-3</title>
     <!-- for bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+</head>
 
 
-  <body>
-    <h1>Hello, world!</h1>
+<body>
+    <!-- for navbar -->
+    <header class="">
+    <nav class="navbar navbar-expand-lg bg-light justify-content-between mb-5">
+        <div class="container-fluid">
+            <a class="navbar-brand text-danger fs-2" href="#">SH Learning Point</a>
+
+
+            <ul>
+                <button class="btn border-primary text-primary 	d-none d-md-block d-lg-none ms-5  "
+                    type="submit">Subscrive</button>
+            </ul>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Courses</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Detail</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Success</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">About</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active">Register</a>
+                    </li>
+                </ul>
+
+                <ul>
+                    <button class="btn border-primary text-primary d-lg-block d-md-none"
+                        type="submit">Subscrive</button>
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+    </header>
+    
+
+
+
+    <!-- for caurosel -->
+
+
+
+
+
 
 
 
     <!-- for js link -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
