for exlore section

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     </div>
 
 
-    <section>
-
+    
+               <!-- for course -->
         <div class="container ">
             <div class="row g-5 m-5">
                 <!-- no-1 -->
@@ -217,10 +217,47 @@
 
 
             </div>
+          <div class="text-center d-none d-lg-block d-xl-none">
+            <button type="submit" class="btn btn-primary " href="#">See More</button>
+            </div>
+        </div>
+
+               <!-- for explore -->
+        <div class="container border mt-5">
+            <div class="row border shadow flex flex-lg-row flex-md-row flex-sm-column flex-column justify-contents-center align-items-center">
+                <div class="col-6 col-md-6 col-lg-6">
+                    <img class="w-100 p-3" src="./images/working.png" alt="">
+
+                </div>
+                <div class="col-6 col-lg-6 col-md-6">
+                    <div class="">
+                    <h1>Explore the E-learning Institution</h1>
+                    <p>E-learning Institution. Our course is perfect for you if you stay us.
+                        you are promised with our commitment.
+                        Our course is perfect for you if you stay us.
+                        you are promised with our commitment...<b class="text-info">see more</b></p>
+
+                        <div class="flex flex-column">
+
+                        <h1 class="mt-5">3.2k+</h1>
+                        <span>online course</span>
+
+                   
+                        <h1 class="mt-4">600+ </h1>
+                        <span>EXPERT MEMBER</span>
+
+                        <h1 class="mt-4">2k+ </h1>
+                        <span class="text-disable">Reading and Review</span>
+                        <button type="button" class="btn btn-primary ms-5">Read More</button>
+                        </div>
+
+
+                          </div>
+                </div>
+            </div>
         </div>
 
 
-    </section>
 
 
 
