--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ASSIGNMENT-3</title>
+    <title>SH Learning Point</title>
     <!-- for bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+
+    <!-- for awesome icon  -->
+    <script src="https://kit.fontawesome.com/1d800f5af6.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -21,7 +25,7 @@
 
                 <ul>
                     <button class="btn border-primary text-primary 	d-none d-md-block d-lg-none ms-5  "
-                        type="submit">Subscrive</button>
+                        type="submit">Subscribe</button>
                 </ul>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -30,7 +34,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav
+                     m-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
@@ -217,17 +222,22 @@
 
 
         </div>
-        <div class="text-center d-none d-lg-block d-xl-none">
-            <button type="submit" class="btn btn-primary " href="#">See More</button>
+        <div class="text-center d-none d-lg-block d-md-none">
+            <button type="submit" class="btn btn-primary " href="#">See More C</button>
         </div>
+        <div class="text-center d-block d-lg-none d-md-block ">
+            <button type="submit" class="btn btn-primary " href="#">View All</button>
+        </div>
+
+
     </div>
 
     <!-- for explore -->
-    <div class="container border m-5">
+    <div class="container bg-light border m-5">
         <div
-            class="row border shadow flex flex-lg-row flex-md-row flex-sm-column flex-column justify-contents-center align-items-center">
+            class="row flex flex-lg-row flex-md-row flex-sm-column flex-column justify-contents-center align-items-center">
             <div class="col-6 col-md-6 col-lg-6">
-                <img class="w-100 p-3" src="./images/working.png" alt="">
+                <img class="w-100" src="./images/working.png" alt="">
 
             </div>
             <div class="col-6 col-lg-6 col-md-6">
@@ -350,6 +360,180 @@
             <button class="btn btn-primary">View All</button>
         </div>
     </div>
+
+
+
+
+
+    <!-- for question and accordin section -->
+
+
+    <div class="container p-5 m-5">
+        <section class="text-center">
+            <h1>Frequently Asked Questions </h1>
+            <p>Generally you can see some answer of question those most of the student asked us .<br>You can click these
+                and
+                know it .open this frequently asked questions for you</p>
+        </section>
+
+
+
+        <!-- for accordin -->
+
+        <div class="accordion" id="accordionExample">
+
+            <!-- item-1 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        What is difference between FlexBox and Grid?
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Grid makes actual columns and rows. Content will line up from one to the other, as you ask it
+                        to.
+                        Flexbox doesn’t. Not only in the second dimension (which is easiest to talk about), but also in
+                        the
+                        first dimension. Flexbox isn’t for most of the things we’ve been using it for.
+
+                    </div>
+                </div>
+            </div>
+            <!-- item-2 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        What is difference between Bootstrap and Tailwind?
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        The significant difference between Tailwind CSS and Bootstrap is that Tailwind offers
+                        predesigned
+                        widgets to build a site from scratch with fast UI development, while Bootstrap comes with a set
+                        of
+                        pre-styled responsive, mobile-first components that possess a definite UI kit.
+                    </div>
+                </div>
+            </div>
+            <!-- item-3 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
+                        What is CSS Box model?
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        When laying out a document, the browser's rendering engine represents each element as a
+                        rectangular
+                        box according to the standard CSS basic box model. CSS determines the size, position, and
+                        properties
+                        (color, background, border size, etc.) of these boxes.
+
+                    </div>
+                </div>
+            </div>
+
+            <!-- item-4 -->
+
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        What is the Semantic tag?
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+
+                        Semantic addresses this shortcoming by defining specific tags to indicate clearly what role is
+                        played by the content those tags contain. That explicit information helps robots/crawlers like
+                        Google and Bing to better understand which content is important, which is a subsidiary, which is
+                        for
+                        navigation, and so on.
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- for company in large device -->
+    <div class="container d-lg-block d-xl-block d-md-none d-none m-4">
+        <h1 class="text-center">Trusted by over 800+ companies</h1>
+
+        <div class="row row-cols-lg-6 m-4">
+            <div class="col"><img src="./images/company/company-1.png" alt=""></div>
+            <div class="col"><img src="./images/company/company-2.png" alt=""></div>
+            <div class="col"><img src="./images/company/company-3.png" alt=""></div>
+            <div class="col"><img src="./images/company/company-4.png" alt=""></div>
+            <div class="col"><img src="./images/company/company-5.png" alt=""></div>
+            <div class="col"><img src="./images/company/company-6.png" alt=""></div>
+
+
+        </div>
+    </div>
+
+
+    <!-- for footer -->
+
+
+    <footer class="bg-dark text-center text-white">
+        <div class="">
+            <h2>SH Learning Point</h2>
+            <p>#Office , Maijdee Court,Noakhali District.<br>
+                People Republic of Bangladesh,South-Asia
+            </p>
+        </div>
+
+
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+
+
+            <!-- Section: Social media -->
+            <section class="mb-4">
+                <!-- Facebook -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-facebook-f"></i></a>
+
+                <!-- Messanger -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fa-brands fa-facebook-messenger"></i></a>
+
+                <!-- Google -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-google"></i></a>
+
+                <!-- Instagram -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-instagram"></i></a>
+
+                <!-- Linkedin -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-linkedin-in"></i></a>
+
+                <!-- Github -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-github"></i></a>
+            </section>
+
+        </div>
+
+
+    </footer>
+
+
 
 
 
