--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
         </div>
         <div class="text-center d-none d-lg-block d-md-none">
-            <button type="submit" class="btn btn-primary " href="#">See More C</button>
+            <button type="submit" class="btn btn-primary " href="#">See More Course</button>
         </div>
         <div class="text-center d-block d-lg-none d-md-block ">
             <button type="submit" class="btn btn-primary " href="#">View All</button>
@@ -485,44 +485,35 @@
     </div>
 
 
+
+
     <!-- for footer -->
-
-
-    <footer class="bg-dark text-center text-white">
-        <div class="">
+    <footer class="bg-dark text-center text-white d-flex flex-column align-items-center" style="height:19rem" >
+        <div class=" mt-5">
             <h2>SH Learning Point</h2>
             <p>#Office , Maijdee Court,Noakhali District.<br>
                 People Republic of Bangladesh,South-Asia
             </p>
         </div>
-
-
         <!-- Grid container -->
         <div class="container p-4 pb-0">
-
-
             <!-- Section: Social media -->
             <section class="mb-4">
                 <!-- Facebook -->
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-facebook-f"></i></a>
-
                 <!-- Messanger -->
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fa-brands fa-facebook-messenger"></i></a>
-
                 <!-- Google -->
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-google"></i></a>
-
                 <!-- Instagram -->
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-instagram"></i></a>
-
                 <!-- Linkedin -->
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-linkedin-in"></i></a>
-
                 <!-- Github -->
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-github"></i></a>
@@ -532,6 +523,7 @@
 
 
     </footer>
+    
 
 
 
