--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
 
 <body>
-    <!-- for navbar and curousol-->
+    <!-- for navbar-->
 
 
     <header class="">
         <nav class="navbar navbar-expand-lg fixed-top bg-light justify-content-between mb-5">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand text-danger fs-2" href="#">SH Learning Point</a>
 
 
@@ -67,88 +67,80 @@
             </div>
         </nav>
 
-        <!-- for caurosel -->
-
-
-
-        <section class="m-5">
-
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <!-- <div class="carousel-inner"> -->
-
-                <div class="carousel-inner" role="listbox" style="max-width:1320px; max-height:600px !important;">
-
-
-                    <!-- item-1 -->
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <!-- cap-1 -->
-                        <div
-                            class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100 ">
-
-                            <h1 class="text-white">GET START DIGITAL <br> LEARNING</h1>
-                            <p class="text-light">You can confidence on our couse . Because you try to best support to
-                                our
-                                student.you can scroll our our site</p>
-                            <button type="btn" class="btn btn-primary p-2">GET START</button>
-                        </div>
-                    </div>
-                    <!-- item-2 -->
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="./images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                        <!-- cap-2 -->
-                        <div
-                            class="carousel-caption  d-flex flex-column justify-content-center align-items-center h-100 ">
-                            <h1 class="text-white">GET START DIGITAL <br> LEARNING</h1>
-                            <p class="text-light">You can confidence on our couse . Because you try to best support to
-                                our
-                                student.you can scroll our our site</p>
-                            <button type="btn" class="btn btn-primary p-2">GET START</button>
-                        </div>
-                    </div>
-                    <!-- item-3 -->
-                    <div class="carousel-item">
-                        <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-
-                        <!-- /cap-3 -->
-                        <div
-                            class="carousel-caption  d-flex flex-column justify-content-center align-items-center h-100 ">
-                            <h1 class="text-white">GET START DIGITAL <br> LEARNING</h1>
-                            <p class="text-light">You can confidence on our couse . Because you try to best support to
-                                our
-                                student.you can scroll our our site</p>
-                            <button type="btn" class="btn btn-primary p-2">GET START</button>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-
-
-        </section>
-
-
-
     </header>
 
+    <!-- for carousel -->
 
+    <section class="mt-5">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <!-- item-1 -->
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="images/cover/cover-1.png" class="img-fluid d-block w-100 " alt="...">
+
+                    <!-- caption-1 -->
+                    <div
+                        class="carousel-caption d-flex flex-column align-items-center justify-content-center h-100 text-white">
+                        <h1 class="text-white">GET START JAVASCRIPT <br>COURSE</h1>
+                        <p class="text-light">You can confidence on our couse . Because you try to best support to
+                            our<br>
+                            student.you can scroll our our site. You can enroll our course by click GET START. Welcome
+                            to our course</p>
+                        <button type="btn" class="btn btn-primary p-2">GET START</button>
+                    </div>
+                </div>
+                <!-- carousel-2 -->
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                    <!-- cap-2 -->
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center h-100">
+                        <h1 class="text-white">ENROLL GRAPICS DESIGN <br> COURSE</h1>
+                        <p class="text-light">You can confidence on our couse . Because you try to best support to
+                            our<br>
+                            student.you can scroll our our site.you can scroll our our site. You can enroll our course
+                        </p>
+                        <button type="btn" class="btn btn-primary p-2">GET START</button>
+                    </div>
+                </div>
+
+                <!-- item-3-->
+                <div class="carousel-item">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+
+                    <!-- cap-3 -->
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center h-100">
+                        <h1 class="text-white">JOIN WTTH DIGITAL MARKETING<br>BATCH</h1>
+                        <p class="text-light">You can confidence on our couse . Because you try to best support to
+                            our<br>
+                            student.you can scroll our our site . you can scroll our our site. You can enroll our
+                            course.</p>
+                        <button type="btn" class="btn btn-primary p-2">GET START</button>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+
+    </section>
 
 
 
@@ -168,10 +160,10 @@
 
         <!-- for course -->
         <div class="container mb-5">
-            <div class="row g-5 m-5">
+            <div class="row g-5 ">
                 <!-- no-1 -->
                 <div
-                    class=" p-0 col-12 col-md-12 col-lg-6 d-flex flex-column flex-lg-row flex-md-row flex-sm-column align-items-center bg-light">
+                    class=" col-12 col-md-12 col-lg-6 d-flex flex-column flex-lg-row flex-md-row flex-sm-column align-items-center bg-light">
                     <img class="img-fluid w-100 p-4" src="./images/course/course-1.png" alt="">
                     <div class="m-5">
                         <h4>Fundamental Of UI/UX Design
@@ -255,24 +247,24 @@
 
             </div>
             <div class="text-center d-none d-lg-block d-md-none">
-                <button type="submit" class="btn btn-primary " href="#">See More Course</button>
+                <button type="submit" class="btn btn-primary mt-5" href="#">See More Course</button>
             </div>
             <div class="text-center d-block d-lg-none d-md-block ">
-                <button type="submit" class="btn btn-primary " href="#">View All</button>
+                <button type="submit" class="btn mt-5 btn-primary " href="#">View All</button>
             </div>
 
 
         </div>
 
         <!-- for explore -->
-        <div class="container bg-light border m-5">
+        <div class="container bg-light border">
             <div
                 class="row flex flex-lg-row flex-md-row flex-sm-column flex-column justify-contents-center align-items-center">
-                <div class="col-6 col-md-6 col-lg-6">
+                <div class="col-12 col-md-6 col-lg-6">
                     <img class="w-100" src="./images/working.png" alt="">
 
                 </div>
-                <div class="col-6 col-lg-6 col-md-6">
+                <div class="col-12 col-lg-6 col-md-6">
                     <div class="">
                         <h1>Explore the E-learning Institution</h1>
                         <p>E-learning Institution. Our course is perfect for you if you stay us.
@@ -286,8 +278,10 @@
                             <span>online course</span>
 
 
-                            <h1 class="mt-4">600+ </h1>
-                            <span>EXPERT MEMBER</span>
+                            <div>
+                                <h1 class="mt-4">600+ </h1>
+                                <span>EXPERT MEMBER</span>
+                            </div>
 
                             <h1 class="mt-4">2k+ </h1>
                             <span class="text-disable">Reading and Review</span>
@@ -302,7 +296,7 @@
 
 
         <!-- for ready join -->
-        <div class="container">
+        <div class="container mt-5">
             <section
                 class="text-start bg-info border rounded d-flex flex-md-column flex-lg-row flex-column align-items-center justify-content-between ">
 
@@ -366,23 +360,23 @@
 
 
             <div class="container mt-5 mb-4">
-                <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 ">
-                    <div class="col">
+                <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 justify-items-center">
+                    <div class="col d-flex flex-column align-items-center">
                         <img src="./images/student/student-1.png" alt="">
                         <h4>AZGOR ALI</h4>
                         <P>Doctorse group Ltd.</P>
                     </div>
-                    <div class="col">
+                    <div class="col d-flex flex-column align-items-center">
                         <img src="./images/student/student-2.png" alt="">
                         <h4>ROKEYA BEGOM</h4>
                         <P>Officer of woman team.</P>
                     </div>
-                    <div class="col">
+                    <div class="col d-flex flex-column align-items-center">
                         <img src="./images/student/student-3.png" alt="">
                         <h4>Prahallad C.D.</h4>
                         <P>A Teacher of University.</P>
                     </div>
-                    <div class="col">
+                    <div class="col d-flex flex-column align-items-center">
                         <img src="./images/student/student-4.png" alt="">
                         <h4>Nahida Akhter</h4>
                         <P>S.M. International Group.</P>
@@ -393,7 +387,7 @@
 
 
                 <div class="text-center d-md-none d-lg-block d-sm-block d-block">
-                    <button class="btn btn-primary">View All</button>
+                    <button class="btn btn-primary ">View All</button>
                 </div>
             </div>
         </div>
@@ -489,7 +483,7 @@
         <!-- for question and accordin section -->
 
 
-        <div class="container p-5 m-5">
+        <div class="container p-5">
             <section class="text-center">
                 <h1>Frequently Asked Questions </h1>
                 <p>Generally you can see some answer of question those most of the student asked us .<br>You can click
@@ -596,7 +590,7 @@
         </div>
 
 
-        <!-- for company in large device -->
+        <!-- for company name only for large device -->
         <div class="container d-lg-block d-xl-block d-md-none d-none m-4">
             <h1 class="text-center">Trusted by over 800+ companies</h1>
 
@@ -657,7 +651,10 @@
 
 
 
-
+                 <!-- --------------------------------------
+                -//////// thats complete-/////////////////
+            .................................................. -->
+            <!-- @sarwar hossain asik -->
 
 
 
