--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
 
 
 <body>
+
+
+
     <!-- for navbar-->
-
-
     <header class="">
         <nav class="navbar navbar-expand-lg fixed-top bg-light justify-content-between mb-5">
             <div class="container">
-                <a class="navbar-brand text-danger fs-2" href="#">SH Learning Point</a>
+                <a class="navbar-brand text-danger fs-2 border shadow rounded bg-info p-3" href="#">!!!SH LEARNING POINT
+                    !!!</a>
 
 
-                <ul class="d-none d-md-block d-lg-none ">
-                    <button class="btn border-primary text-primary" type="submit">Subscribe</button>
+                <ul class="d-none d-md-block d-lg-none mt-3 ms-5">
+                    <button class="btn btn-danger" type="submit">Subscribe</button>
                 </ul>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler bg-warning" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -41,26 +43,27 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Courses</a>
+                            <a class="nav-link active" href="#courses">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Detail</a>
+                            <a class="nav-link active" href="#question">Detail</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Success</a>
+                            <a class="nav-link active" href="#success">Success</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">About</a>
+                            <a class="nav-link active " href="#join">Enrolling</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#foot">About Us</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link active">Register</a>
-                        </li>
+
+
                     </ul>
 
                     <ul>
-                        <button class="btn border-primary text-primary d-lg-block d-md-none"
-                            type="submit">Subscribe</button>
+                        <button class="btn btn-danger d-lg-block d-md-none" type="submit">Subscribe</button>
                     </ul>
 
                 </div>
@@ -159,7 +162,7 @@
 
 
         <!-- for course -->
-        <div class="container mb-5">
+        <div class="container mb-5" id="courses">
             <div class="row g-5 ">
                 <!-- no-1 -->
                 <div
@@ -296,7 +299,7 @@
 
 
         <!-- for ready join -->
-        <div class="container mt-5">
+        <div class="container mt-5" id="join">
             <section
                 class="text-start bg-info border rounded d-flex flex-md-column flex-lg-row flex-column align-items-center justify-content-between ">
 
@@ -346,7 +349,7 @@
 
 
         <!-- for meet section -->
-        <div class="container mt-5">
+        <div class="container mt-5" id="success">
             <section class="text-start pt-3 mt-5">
                 <h1>Meet Our Successfull <br> Student</h1>
                 <p>We have a lot of student who are gained their success from here .<br>you can see them cooment or
@@ -483,7 +486,7 @@
         <!-- for question and accordin section -->
 
 
-        <div class="container p-5">
+        <div class="container p-5" id="question">
             <section class="text-center">
                 <h1>Frequently Asked Questions </h1>
                 <p>Generally you can see some answer of question those most of the student asked us .<br>You can click
@@ -613,7 +616,7 @@
 
 
     <!-- for footer -->
-    <footer class="bg-dark text-center text-white d-flex flex-column align-items-center" style="height:19rem">
+    <footer class="bg-dark text-center text-white d-flex flex-column align-items-center" id="foot" style="height:19rem">
         <div class=" mt-5">
             <h2>SH Learning Point</h2>
             <p>#Office , Maijdee Court,Noakhali District.<br>
@@ -625,23 +628,25 @@
             <!-- Section: Social media -->
             <section class="mb-4">
                 <!-- Facebook -->
-                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/MdShAsik.asik.7"
-                    role="button"><i class="fab fa-facebook-f"></i></a>
-                <!-- Messanger -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="fa-brands fa-facebook-messenger"></i></a>
+                <a class="btn btn-outline-light bg-primary btn-floating m-1"
+                    href="https://www.facebook.com/MdShAsik.asik.7" role="button"><i class="fab fa-facebook-f"></i></a>
+                <!-- Youtube-->
+                <a class="btn btn-outline-light btn-floating m-1 bg-danger" href="https://youtu.com" role="button"><i
+                        class="fa-brands fa-youtube"></i></a>
                 <!-- Google -->
-                <a class="btn btn-outline-light btn-floating m-1" href="https://www.google.com" role="button"><i
-                        class="fab fa-google"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1 bg-success" href="https://www.google.com"
+                    role="button"><i class="fab fa-google"></i></a>
                 <!-- Instagram -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                <a class="btn btn-outline-light btn-floating m-1 bg-warning bg-gradiant"
+                    href="https://images.app.goo.gl/UQub97T8NLuSWhio7" role="button"><i
                         class="fab fa-instagram"></i></a>
                 <!-- Linkedin -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1 bg-info"
+                    href="https://www.linkedin.com/pulse/topics/home/?trk=homepage-basic_guest_nav_menu_discover"
+                    role="button"><i class="fab fa-linkedin-in"></i></a>
                 <!-- Github -->
-                <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/sarwar-asik/ASSIGNMENT-3"
-                    role="button"><i class="fab fa-github"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1 bg-secondary bg-gradiant"
+                    href="https://github.com/sarwar-asik/ASSIGNMENT-3" role="button"><i class="fab fa-github"></i></a>
             </section>
 
         </div>
@@ -651,10 +656,10 @@
 
 
 
-                 <!-- --------------------------------------
+    <!-- --------------------------------------
                 -//////// thats complete-/////////////////
             .................................................. -->
-            <!-- @sarwar hossain asik -->
+    <!-- @sarwar hossain asik -->
 
 
 
