--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="">
         <nav class="navbar navbar-expand-lg fixed-top bg-light justify-content-between mb-5">
             <div class="container">
-                <a class="navbar-brand text-danger fs-2 border shadow rounded bg-info p-3" href="#">!!!SH LEARNING POINT
+                <a class="navbar-brand text-danger fs-2 border shadow rounded bg-info" href="#">!!!SH LEARNING POINT
                     !!!</a>
 
 
