--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <!-- for navbar-->
     <header class="">
-        <nav class="navbar navbar-expand-lg fixed-top bg-light justify-content-between mb-5">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light justify-content-between mb-3">
             <div class="container">
-                <a class="navbar-brand text-danger fs-2 border shadow rounded bg-info" href="#">!!!SH LEARNING POINT
+                <a class="navbar-brand text-white fs-2 border rounded bg-info" href="#">!!!SH LEARNING POINT
                     !!!</a>
 
 
